navigation links added

--- a/style.css
+++ b/style.css
@@ -2,6 +2,20 @@
   flex-direction: column;
 }
 
-th{
-  color:red;
+ul{
+  list-style: none;
+}
+
+.list-group-item{
+  display: flex;
+  flex-direction: row;
+}
+
+.grades{
+  display:flex;
+  flex-direction: row;
+}
+
+.lists{
+  display: flex;
 }
